@@ -158,11 +158,11 @@ table.g-breadcrumb {
 }
 
 .g-tabset a {
+    color: #000;
+    background-color: #FCFCF3;
     margin: -2px 0 -1px 2px;
     white-space: nowrap;
     text-decoration: none;
-    color: #000;
-    background-color: #FCFCF3;
     padding: 2px 0.5em;
     display: block;
     border: 1px solid #000;
@@ -177,9 +177,9 @@ table.g-breadcrumb {
 }
 
 .g-tabset a.g-activeTab {
-    border-bottom: 1px solid #000;
-    background-color: #009;
     color: #fff;
+	background-color: #009;
+    border-bottom: 1px solid #000;
 }
 
 .g-littlered	{
@@ -635,13 +635,13 @@ input:focus, textarea:focus, select:focus {
 input:hover.g-button, input:focus.g-button {
 }
 
-.g-usernameInput {
+.g-usernameInput, .g-usernameInput:focus {
   background: url('../images/icons/user_gray.gif') no-repeat 1px 1px;
   padding-left: 20px;
   margin-left: 3px;
 }
 
-.g-passwordInput {
+.g-passwordInput, .g-passwordInput:focus {
   background: url('../images/icons/key.gif') no-repeat 1px 1px;
   padding-left: 20px;
   margin-left: 3px;
