@@ -7,6 +7,6 @@
 
 $name = _("Black");
 $description = _("Black with grey pipes");
-$version = '2.0.1';
-$last_update = '2007-09-10';
+$version = '2.0.2';
+$last_update = '2007-10-11';
 ?>
