@@ -7,6 +7,6 @@
 
 $name = _("Jenskin");
 $description = _("A Skin made by Jens. It looks like the config wizard in 1.5.x");
-$version = '2.0.0';
-$last_update = '2006-08-05';
+$version = '2.0.1';
+$last_update = '2007-10-11';
 ?>
